fix: layout bug when River meta has to wrap
Refs: HRINFO-1205

--- a/html/themes/custom/common_design_subtheme/components/hri-river/hri-river.css
+++ b/html/themes/custom/common_design_subtheme/components/hri-river/hri-river.css
@@ -138,6 +138,10 @@
   padding: 0;
   font-size: var(--cd-font-size--small);
 }
+.hri-river__result .meta div {
+  display: inline;
+  white-space: nowrap;
+}
 .hri-river__result .meta dt {
   display: inline;
   margin: 0;
@@ -154,7 +158,7 @@
   margin: 0 0.5rem;
   content: "•";
 }
-.hri-river__result .meta dd:last-of-type::after {
+.hri-river__result .meta div:last-of-type dd::after {
   content: none;
 }
 
